# Store

./: .env.like  Dockerfile  README.md  docker-compose.yml  pyproject.toml
service/: models.py  serializers.py  urls.py  views.py
service/fixtures/: fixture.json
service/migrations/: 0001_initial.py
store/: settings.py  urls.py
templates/service/: item_detail.html  item_list.html
